# jamalang

./: .gitignore  404.html  CHANGELOG_TEMPLATE.md  Cargo.toml  README.md  build.gradle  build.gradle.kts  gradle.properties  index.html  script.jlang  settings.gradle  sitemap.xml  versions.toml
.github/workflows/: publish-mkdocs.yml
cli/: Cargo.toml
cli/src/: ast.rs  compile.rs  main.rs  run.rs
jamalang/: Cargo.toml  build.rs
jamalang/src/: lib.rs
jamalang/src/compiler/: builtins.rs  mod.rs
jamalang/src/compiler/codegen/: mod.rs  value.rs
jamalang/src/compiler/codegen/basic/: assignment.rs  foreign_module.rs  function_definition.rs  mod.rs  return.rs
jamalang/src/compiler/codegen/control_flow/: if_statement.rs  mod.rs
jamalang/src/compiler/codegen/expr/: array.rs  function_call.rs  mod.rs  op.rs  values.rs
jamalang/src/compiler/codegen/looping/: for.rs  mod.rs  while.rs
jamalang/src/parser/: ast.rs  expr.rs  grammar.pest  mod.rs
jamalang/src/tests/: mod.rs
language/src/main/antlr/: Grammar.g4
search/: search_index.json
site/: mkdocs.yml
site/content/: CNAME  index.md
site/content/specification/: introduction.md  requirements.md  tests.md
specification/introduction/: index.html
specification/requirements/: index.html
specification/tests/: index.html
src/main/java/io/github/jamalam360/jamalang/: Main.java
src/main/java/io/github/jamalam360/modifier/: ModifierInit.java
src/main/resources/: modifier.mixins.json  quilt.mod.json
stdlib/: Cargo.toml
stdlib/src/: lib.rs
(+14 files in other folders)
