[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
jamalang = { path = "../jamalang" }
inkwell.workspace = true
