[package]
name = "jamalang"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5"
enum_variant_type = "0.3"
inkwell.workspace = true
lazy_static = "1.4"
llvm-sys = "150"
pest = "2.5"
pest_derive = "2.5"
stdio-override = "0.1"
